* added RPI serial config

--- a/seq-io-serial.config
+++ b/seq-io-serial.config
@@ -1,5 +1,5 @@
 config-serialport baudrate 19200
-config-serialport serialport /dev/ttys001
+config-serialport serialport /dev/ttyAMA0
 config-serialport init-bang 1
 config-serialport 2nd-bank-enabled 2
 config-serialport decrease-volume 3
